RESOLVED FIXED284877
REGRESSION(287835@main): [CoordinatedGraphics] Scrolling by clicking on any scrollbar position is broken
https://bugs.webkit.org/show_bug.cgi?id=284877
Summary REGRESSION(287835@main): [CoordinatedGraphics] Scrolling by clicking on any s...
Carlos Garcia Campos
Reported 2024-12-18 05:21:28 PST
This broke in 287835@main because the CoordinatedPlatformLayer is not updated when GraphicsLayerCoordinated::syncPosition is called. This is the expected behavior, the position will be set on CoordinatedPlatformLayer later when scrolling layers are positioned. The problem is that GraphicsLayerCoordinated is using the CoordinatedPlatformLayer properties to compute the layer transform, and now it's using the previous position, causing a wrong transformed visible rect to be set in the CoordinatedPlatformLayer. We should use the GraphicsLayer properties when computing the transforms.
Attachments
Carlos Garcia Campos
Comment 1 2024-12-18 05:27:18 PST
EWS
Comment 2 2024-12-19 01:05:22 PST
Committed 288079@main (9ebe9d89eaef): <https://commits.webkit.org/288079@main> Reviewed commits have been landed. Closing PR #38132 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-19 01:06:13 PST
Note You need to log in before you can comment on or make changes to this bug.