REGRESSION(287835@main): [CoordinatedGraphics] Scrolling by clicking on any scrollbar position is broken https://bugs.webkit.org/show_bug.cgi?id=284877

Reviewed by Alejandro G. Castro.

This broke in 287835@main because the CoordinatedPlatformLayer is not
updated when GraphicsLayerCoordinated::syncPosition is called. This is
the expected behavior, the position will be set on
CoordinatedPlatformLayer later when scrolling layers are positioned. The
problem is that GraphicsLayerCoordinated is using the
CoordinatedPlatformLayer properties to compute the layer transform, and
now it's using the previous position, causing a wrong transformed
visible rect to be set in the CoordinatedPlatformLayer. We should use
the GraphicsLayer properties when computing the transforms.

* Source/WebCore/platform/graphics/texmap/coordinated/GraphicsLayerCoordinated.cpp:
(WebCore::GraphicsLayerCoordinated::computeLayerTransformIfNeeded):

Canonical link: https://commits.webkit.org/288079@main